# makne

./: CMakeLists.txt  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
include/: CodeReorderer.h  ControlFlowObfuscator.h  DataEncoder.h  DecryptorGenerator.h  ImportObfuscator.h  InstructionSubstitutor.h  JunkCodeInserter.h  MetamorphicEngine.h  ObfuscationPass.h  PEStructs.h  PayloadEncryptor.h  PolymorphicEngine.h  RegisterRandomizer.h  SectionRandomizer.h  Utils.h
python/makne/: __init__.py  __main__.py
scratch/: test_zydis.cpp
src/: CodeReorderer.cpp  ControlFlowObfuscator.cpp  DataEncoder.cpp  DecryptorGenerator.cpp  ImportObfuscator.cpp  InstructionSubstitutor.cpp  JunkCodeInserter.cpp  MetamorphicEngine.cpp  PayloadEncryptor.cpp  PolymorphicEngine.cpp  RegisterRandomizer.cpp  SectionRandomizer.cpp  Utils.cpp  main.cpp
