[build-system]
requires = ["scikit-build-core>=0.4.3"]
build-backend = "scikit_build_core.build"

[project]
name = "makne"
version = "1.0.0"
description = "Advanced binary-level mutation and obfuscation framework for PE binaries"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Developer" }
]
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/anonymouschichvy/makne"
Repository = "https://github.com/anonymouschichvy/makne"

[project.scripts]
makne = "makne.__main__:main"

[tool.scikit-build]
cmake.args = ["-DBUILD_PYTHON_PACKAGE=ON"]
wheel.install-dir = "makne"
